--- a/Menu/menu.ini
+++ b/Menu/menu.ini
@@ -20,7 +20,7 @@ WheelSize=100
 IconSize=25
 
 ;------------------------------------------------------------------------------------------------MOUSE LOCATION------------------------------------------------------------------------------------------------
-;----------------------------------------------------------------------------------------------Uses MouseXY Plugin---------------------------------------------------------------------------------------------
+;-----------------------------------------------------------------------------------------Uses MouseXY Plugin by Fawxy-----------------------------------------------------------------------------------------
 ;------------------------------------------------------------------------------ https://forum.rainmeter.net/viewtopic.php?t=22900 -----------------------------------------------------------------------------
 
 [MeasureMouseX]
@@ -141,6 +141,7 @@ Hidden=1
 Group=GamingArc
 MouseOverAction=[!ShowMeterGroup "OriginArc"][!HideMeterGroup "SteamArc"][!HideMeterGroup "BattleNetArc"][!HideMeterGroup "GOGArc"][!HideMeterGroup "EtcGamingArc"][!Redraw]
 LeftMouseUpAction=["D:\Programs\Origin\Origin.exe"][!ToggleFade]
+RightMouseUpAction=[%SystemRoot%\explorer.exe "D:\Programs\Origin\Origin Games"][!ToggleFade]
 
 [MeterBattleNet]
 Meter=Image
@@ -154,6 +155,7 @@ Hidden=1
 Group=GamingArc
 MouseOverAction=[!ShowMeterGroup "BattleNetArc"][!HideMeterGroup "SteamArc"][!HideMeterGroup "OriginArc"][!HideMeterGroup "GOGArc"][!HideMeterGroup "EtcGamingArc"][!Redraw]
 LeftMouseUpAction=["D:\Programs\Battle.net\Battle.net.exe"][!ToggleFade]
+RightMouseUpAction=[%SystemRoot%\explorer.exe "D:\Programs\Battle.net"][!ToggleFade]
 
 [MeterGOG]
 Meter=Image
@@ -167,6 +169,7 @@ Hidden=1
 Group=GamingArc
 MouseOverAction=[!ShowMeterGroup "GOGArc"][!HideMeterGroup "BattleNetArc"][!HideMeterGroup "SteamArc"][!HideMeterGroup "OriginArc"][!HideMeterGroup "EtcGamingArc"][!Redraw]
 LeftMouseUpAction=["D:\Programs\GalaxyClient\GalaxyClient.exe"][!ToggleFade]
+RightMouseUpAction=[%SystemRoot%\explorer.exe "D:\Programs\GOG Galaxy\Games"][!ToggleFade]
 
 [MeterEtcGaming]
 Meter=Image
@@ -179,7 +182,7 @@ AntiAlias=1
 Hidden=1
 Group=GamingArc
 MouseOverAction=[!ShowMeterGroup "EtcGamingArc"][!HideMeterGroup "BattleNetArc"][!HideMeterGroup "SteamArc"][!HideMeterGroup "OriginArc"][!HideMeterGroup "GOGArc"][!Redraw]
-LeftMouseUpAction=["D:\Programs\GalaxyClient\GalaxyClient.exe"][!ToggleFade]
+LeftMouseUpAction=["%SystemRoot%\explorer.exe "D:\Programs\"][!ToggleFade]
 
 ;------------------------------------------------------------------------------------------------Chat Arc------------------------------------------------------------------------------------------------
 
