removed default paths from ini file

--- a/Disappearing Menu/menu.ini
+++ b/Disappearing Menu/menu.ini
@@ -71,7 +71,7 @@ w=#IconSize#
 h=#IconSize#
 AntiAlias=1
 MouseOverAction=[!HideMeterGroup "GamingArc"][!HideMeterGroup "ChatArc"][!HideMeterGroup "ProgramsArc"][!HideMeterGroup "SettingsArc"][!HideMeterGroup "FilesArc"][!HideMeterGroup "EtcGamingArc"][!Redraw]
-LeftMouseUpAction=["C:\Program Files\Opera\launcher.exe"][!ToggleFade]
+LeftMouseUpAction=[""][!ToggleFade] ;copy your program's exe location file inside the parentheses
 
 [MeterGaming]
 Meter=Image
@@ -150,48 +150,48 @@ MouseOverAction=[!ShowMeterGroup "OriginArc"][!HideMeterGroup "SteamArc"][!HideM
 LeftMouseUpAction=["C:\Program Files (x86)\Origin\Origin.exe"][!ToggleFade]
 RightMouseUpAction=[%SystemRoot%\explorer.exe "C:\Program Files (x86)\Origin\Origin Games"][!ToggleFade]
 
-;[MeterBattleNet]
-;Meter=Image
-;ImageName=#@#Images\battlenet.png
-;x=-50r
-;y=0r
-;w=#IconSize#
-;h=#IconSize#
-;AntiAlias=1
-;Hidden=1
-;Group=GamingArc
-;MouseOverAction=[!ShowMeterGroup "BattleNetArc"][!HideMeterGroup "SteamArc"][!HideMeterGroup "OriginArc"];[!HideMeterGroup "GOGArc"][!HideMeterGroup "EtcGamingArc"][!Redraw]
-;LeftMouseUpAction=[""][!ToggleFade]
-;RightMouseUpAction=[%SystemRoot%\explorer.exe ""][!ToggleFade]
+[MeterBattleNet]
+Meter=Image
+ImageName=#@#Images\battlenet.png
+x=-50r
+y=0r
+w=#IconSize#
+h=#IconSize#
+AntiAlias=1
+Hidden=1
+Group=GamingArc
+MouseOverAction=[!ShowMeterGroup "BattleNetArc"][!HideMeterGroup "SteamArc"][!HideMeterGroup "OriginArc"];[!HideMeterGroup "GOGArc"][!HideMeterGroup "EtcGamingArc"][!Redraw]
+LeftMouseUpAction=[""][!ToggleFade]
+RightMouseUpAction=[%SystemRoot%\explorer.exe ""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
 
-;[MeterGOG]
-;Meter=Image
-;ImageName=#@#Images\gog.png
-;x=-21r
-;y=-12r
-;w=#IconSize#
-;h=#IconSize#
-;AntiAlias=1
-;Hidden=1
-;Group=GamingArc
-;MouseOverAction=[!ShowMeterGroup "GOGArc"][!HideMeterGroup "BattleNetArc"][!HideMeterGroup "SteamArc"][!;HideMeterGroup "OriginArc"][!HideMeterGroup "EtcGamingArc"][!Redraw]
-;LeftMouseUpAction=[""][!ToggleFade]
-;RightMouseUpAction=[%SystemRoot%\explorer.exe ""][!ToggleFade]
+[MeterGOG]
+Meter=Image
+ImageName=#@#Images\gog.png
+x=-21r
+y=-12r
+w=#IconSize#
+h=#IconSize#
+AntiAlias=1
+Hidden=1
+Group=GamingArc
+MouseOverAction=[!ShowMeterGroup "GOGArc"][!HideMeterGroup "BattleNetArc"][!HideMeterGroup "SteamArc"][!;HideMeterGroup "OriginArc"][!HideMeterGroup "EtcGamingArc"][!Redraw]
+LeftMouseUpAction=[""][!ToggleFade]
+RightMouseUpAction=[%SystemRoot%\explorer.exe ""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
 
-;[MeterEtcGaming]
-;Meter=Image
-;ImageName=#@#Images\etc.png
-;x=91r
-;y=-3r
-;w=#IconSize#
-;h=#IconSize#
-;AntiAlias=1
-;Hidden=1
-;Group=GamingArc
-;MouseOverAction=[!ShowMeterGroup "EtcGamingArc"][!HideMeterGroup "BattleNetArc"][!HideMeterGroup ;"SteamArc"][!HideMeterGroup "OriginArc"][!HideMeterGroup "GOGArc"][!Redraw]
-;LeftMouseUpAction=["%SystemRoot%\explorer.exe "C:\"][!ToggleFade]
+[MeterEtcGaming]
+Meter=Image
+ImageName=#@#Images\etc.png
+x=91r
+y=-3r
+w=#IconSize#
+h=#IconSize#
+AntiAlias=1
+Hidden=1
+Group=GamingArc
+MouseOverAction=[!ShowMeterGroup "EtcGamingArc"][!HideMeterGroup "BattleNetArc"][!HideMeterGroup "SteamArc"][!HideMeterGroup "OriginArc"][!HideMeterGroup "GOGArc"][!Redraw]
+LeftMouseUpAction=["%SystemRoot%\explorer.exe ""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
 
-;------------------------------------------------------------------------------------------------Chat Arc------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------Chat Arc------------------------------------------------------------------------------------------------
 
 [MeterChatArc]
 Meter=Roundline
@@ -220,7 +220,7 @@ h=#IconSize#
 AntiAlias=1
 Hidden=1
 Group=ChatArc
-LeftMouseUpAction=[""][!ToggleFade]
+LeftMouseUpAction=[""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
 
 [MeterDiscord]
 Meter=Image
@@ -232,7 +232,7 @@ h=#IconSize#
 AntiAlias=1
 Hidden=1
 Group=ChatArc
-LeftMouseUpAction=["C:\Users\Nik\AppData\Local\Discord\app-0.0.297\Discord.exe"][!ToggleFade]
+LeftMouseUpAction=[""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
 
 [MeterTeamspeak]
 Meter=Image
@@ -244,7 +244,7 @@ h=#IconSize#
 AntiAlias=1
 Hidden=1
 Group=ChatArc
-LeftMouseUpAction=[""][!ToggleFade]
+LeftMouseUpAction=[""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
 
 [MeterSkype]
 Meter=Image
@@ -256,7 +256,7 @@ h=#IconSize#
 AntiAlias=1
 Hidden=1
 Group=ChatArc
-LeftMouseUpAction=[""][!ToggleFade]
+LeftMouseUpAction=[""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
 
 ;------------------------------------------------------------------------------------------------Program Arc------------------------------------------------------------------------------------------------
 
@@ -313,7 +313,7 @@ h=#IconSize#
 AntiAlias=1
 Hidden=1
 Group=ProgramsArc
-LeftMouseUpAction=["C:\Program Files (x86)\Microsoft Office\root\Office16\WINWORD.exe"][!ToggleFade]
+LeftMouseUpAction=[""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
 MouseOverAction=[!HideMeterGroup "SettingsArc"][!HideMeterGroup "FilesArc"][!Redraw]
 
 [MeterSettings]
@@ -358,7 +358,7 @@ h=#IconSize#
 AntiAlias=1
 Hidden=1
 Group=FilesArc | ProgramsArc
-LeftMouseUpAction=[%SystemRoot%\explorer.exe ""][!ToggleFade]
+LeftMouseUpAction=[%SystemRoot%\explorer.exe ""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
 
 [MeterCDrive]
 Meter=Image
@@ -394,7 +394,7 @@ h=(#IconSize# * 0.9)
 AntiAlias=1
 Hidden=1
 Group=FilesArc | ProgramsArc
-LeftMouseUpAction=[%SystemRoot%\explorer.exe "C:\Users\Nik\Downloads"][!ToggleFade]
+LeftMouseUpAction=[%SystemRoot%\explorer.exe "C:\Users\%USERNAME%\Downloads"][!ToggleFade]
 
 ;------------------------------------------------------------------------------------------------Settings Arc------------------------------------------------------------------------------------------------
 
@@ -437,7 +437,7 @@ h=#IconSize#
 AntiAlias=1
 Hidden=1
 Group=SettingsArc | ProgramsArc
-LeftMouseUpAction=["C:\Program Files\CCleaner\CCleaner64.exe"][!ToggleFade]
+LeftMouseUpAction=[""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
 
 ;------------------------------------------------------------------------------------------------Etc Gaming Arc------------------------------------------------------------------------------------------------
 
@@ -468,4 +468,4 @@ h=#IconSize#
 AntiAlias=1
 Hidden=1
 Group=EtcGamingArc | GamingArc
-LeftMouseUpAction=["C:\Program Files (x86)\Minecraft\minecraftlauncher.exe"][!ToggleFade]
+LeftMouseUpAction=[""][!ToggleFade]  ;copy your program's exe location file inside the parentheses
